// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<PianoRoll
  canvasHeight={1768}
  canvasWidth={1536}
  currentlySelectedNotes={Array []}
  cursorValue="pointer"
  durationValue="16n"
  gridLayerRef={
    Object {
      "current": null,
    }
  }
  gridLinesArray={
    Array [
      Object {
        "points": Array [
          0,
          0,
          0,
          1728,
        ],
        "strokeWidth": 2,
      },
      Object {
        "points": Array [
          24,
          0,
          24,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          48,
          0,
          48,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          72,
          0,
          72,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          96,
          0,
          96,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          120,
          0,
          120,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          144,
          0,
          144,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          168,
          0,
          168,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          192,
          0,
          192,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          216,
          0,
          216,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          240,
          0,
          240,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          264,
          0,
          264,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          288,
          0,
          288,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          312,
          0,
          312,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          336,
          0,
          336,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          360,
          0,
          360,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          384,
          0,
          384,
          1728,
        ],
        "strokeWidth": 2,
      },
      Object {
        "points": Array [
          408,
          0,
          408,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          432,
          0,
          432,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          456,
          0,
          456,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          480,
          0,
          480,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          504,
          0,
          504,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          528,
          0,
          528,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          552,
          0,
          552,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          576,
          0,
          576,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          600,
          0,
          600,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          624,
          0,
          624,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          648,
          0,
          648,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          672,
          0,
          672,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          696,
          0,
          696,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          720,
          0,
          720,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          744,
          0,
          744,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          768,
          0,
          768,
          1728,
        ],
        "strokeWidth": 2,
      },
      Object {
        "points": Array [
          792,
          0,
          792,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          816,
          0,
          816,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          840,
          0,
          840,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          864,
          0,
          864,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          888,
          0,
          888,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          912,
          0,
          912,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          936,
          0,
          936,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          960,
          0,
          960,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          984,
          0,
          984,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1008,
          0,
          1008,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1032,
          0,
          1032,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1056,
          0,
          1056,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          1080,
          0,
          1080,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1104,
          0,
          1104,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1128,
          0,
          1128,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1152,
          0,
          1152,
          1728,
        ],
        "strokeWidth": 2,
      },
      Object {
        "points": Array [
          1176,
          0,
          1176,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1200,
          0,
          1200,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1224,
          0,
          1224,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1248,
          0,
          1248,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          1272,
          0,
          1272,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1296,
          0,
          1296,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1320,
          0,
          1320,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1344,
          0,
          1344,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          1368,
          0,
          1368,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1392,
          0,
          1392,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1416,
          0,
          1416,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1440,
          0,
          1440,
          1728,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          1464,
          0,
          1464,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1488,
          0,
          1488,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1512,
          0,
          1512,
          1728,
        ],
        "strokeWidth": 0.5,
      },
      Object {
        "points": Array [
          1536,
          0,
          1536,
          1728,
        ],
        "strokeWidth": 2,
      },
      Object {
        "points": Array [
          0,
          0,
          1536,
          0,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          16,
          1536,
          16,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          32,
          1536,
          32,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          48,
          1536,
          48,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          64,
          1536,
          64,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          80,
          1536,
          80,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          96,
          1536,
          96,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          112,
          1536,
          112,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          128,
          1536,
          128,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          144,
          1536,
          144,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          160,
          1536,
          160,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          176,
          1536,
          176,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          192,
          1536,
          192,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          208,
          1536,
          208,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          224,
          1536,
          224,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          240,
          1536,
          240,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          256,
          1536,
          256,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          272,
          1536,
          272,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          288,
          1536,
          288,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          304,
          1536,
          304,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          320,
          1536,
          320,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          336,
          1536,
          336,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          352,
          1536,
          352,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          368,
          1536,
          368,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          384,
          1536,
          384,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          400,
          1536,
          400,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          416,
          1536,
          416,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          432,
          1536,
          432,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          448,
          1536,
          448,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          464,
          1536,
          464,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          480,
          1536,
          480,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          496,
          1536,
          496,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          512,
          1536,
          512,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          528,
          1536,
          528,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          544,
          1536,
          544,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          560,
          1536,
          560,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          576,
          1536,
          576,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          592,
          1536,
          592,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          608,
          1536,
          608,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          624,
          1536,
          624,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          640,
          1536,
          640,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          656,
          1536,
          656,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          672,
          1536,
          672,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          688,
          1536,
          688,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          704,
          1536,
          704,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          720,
          1536,
          720,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          736,
          1536,
          736,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          752,
          1536,
          752,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          768,
          1536,
          768,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          784,
          1536,
          784,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          800,
          1536,
          800,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          816,
          1536,
          816,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          832,
          1536,
          832,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          848,
          1536,
          848,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          864,
          1536,
          864,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          880,
          1536,
          880,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          896,
          1536,
          896,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          912,
          1536,
          912,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          928,
          1536,
          928,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          944,
          1536,
          944,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          960,
          1536,
          960,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          976,
          1536,
          976,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          992,
          1536,
          992,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1008,
          1536,
          1008,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1024,
          1536,
          1024,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1040,
          1536,
          1040,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1056,
          1536,
          1056,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1072,
          1536,
          1072,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1088,
          1536,
          1088,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1104,
          1536,
          1104,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1120,
          1536,
          1120,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1136,
          1536,
          1136,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1152,
          1536,
          1152,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1168,
          1536,
          1168,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1184,
          1536,
          1184,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1200,
          1536,
          1200,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1216,
          1536,
          1216,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1232,
          1536,
          1232,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1248,
          1536,
          1248,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1264,
          1536,
          1264,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1280,
          1536,
          1280,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1296,
          1536,
          1296,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1312,
          1536,
          1312,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1328,
          1536,
          1328,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1344,
          1536,
          1344,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1360,
          1536,
          1360,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1376,
          1536,
          1376,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1392,
          1536,
          1392,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1408,
          1536,
          1408,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1424,
          1536,
          1424,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1440,
          1536,
          1440,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1456,
          1536,
          1456,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1472,
          1536,
          1472,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1488,
          1536,
          1488,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1504,
          1536,
          1504,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1520,
          1536,
          1520,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1536,
          1536,
          1536,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1552,
          1536,
          1552,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1568,
          1536,
          1568,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1584,
          1536,
          1584,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1600,
          1536,
          1600,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1616,
          1536,
          1616,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1632,
          1536,
          1632,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1648,
          1536,
          1648,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1664,
          1536,
          1664,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1680,
          1536,
          1680,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1696,
          1536,
          1696,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1712,
          1536,
          1712,
        ],
        "strokeWidth": 1,
      },
      Object {
        "points": Array [
          0,
          1728,
          1536,
          1728,
        ],
        "strokeWidth": 1,
      },
    ]
  }
  handleKeyDown={[Function]}
  handleMouseDown={[Function]}
  handleMouseUp={[Function]}
  handleNoteClick={[Function]}
  handlePianoKeyClick={[Function]}
  handleScrollBarClickEvents={[Function]}
  handleStageClick={[Function]}
  handleVelocityLayerClick={[Function]}
  horizontalDragMove={[Function]}
  noteLayerRef={
    Object {
      "current": null,
    }
  }
  outerContainerRef={
    Object {
      "current": null,
    }
  }
  padding={10}
  pianoKeyLayerRef={
    Object {
      "current": null,
    }
  }
  pitchesArray={
    Array [
      "B8",
      "A#8",
      "A8",
      "G#8",
      "G8",
      "F#8",
      "F8",
      "E8",
      "D#8",
      "D8",
      "C#8",
      "C8",
      "B7",
      "A#7",
      "A7",
      "G#7",
      "G7",
      "F#7",
      "F7",
      "E7",
      "D#7",
      "D7",
      "C#7",
      "C7",
      "B6",
      "A#6",
      "A6",
      "G#6",
      "G6",
      "F#6",
      "F6",
      "E6",
      "D#6",
      "D6",
      "C#6",
      "C6",
      "B5",
      "A#5",
      "A5",
      "G#5",
      "G5",
      "F#5",
      "F5",
      "E5",
      "D#5",
      "D5",
      "C#5",
      "C5",
      "B4",
      "A#4",
      "A4",
      "G#4",
      "G4",
      "F#4",
      "F4",
      "E4",
      "D#4",
      "D4",
      "C#4",
      "C4",
      "B3",
      "A#3",
      "A3",
      "G#3",
      "G3",
      "F#3",
      "F3",
      "E3",
      "D#3",
      "D3",
      "C#3",
      "C3",
      "B2",
      "A#2",
      "A2",
      "G#2",
      "G2",
      "F#2",
      "F2",
      "E2",
      "D#2",
      "D2",
      "C#2",
      "C2",
      "B1",
      "A#1",
      "A1",
      "G#1",
      "G1",
      "F#1",
      "F1",
      "E1",
      "D#1",
      "D1",
      "C#1",
      "C1",
      "B0",
      "A#0",
      "A0",
      "G#0",
      "G0",
      "F#0",
      "F0",
      "E0",
      "D#0",
      "D0",
      "C#0",
      "C0",
    ]
  }
  quantizeValue="16n"
  section={
    Object {
      "channelId": "0443540104839537",
      "id": "7943665839704739",
      "notes": Array [],
      "numberOfBars": 4,
      "start": "0:0:0",
    }
  }
  seekerLayerRef={
    Object {
      "current": null,
    }
  }
  seekerLineRef={
    Object {
      "current": null,
    }
  }
  selectedNotes={Array []}
  stageHeight={600}
  stageRef={
    Object {
      "current": null,
    }
  }
  stageWidth={800}
  transportBarNumbersArray={
    Array [
      Object {
        "barNumber": 0,
        "xPos": 0,
      },
      Object {
        "barNumber": 1,
        "xPos": 384,
      },
      Object {
        "barNumber": 2,
        "xPos": 768,
      },
      Object {
        "barNumber": 3,
        "xPos": 1152,
      },
    ]
  }
  transportLayerRef={
    Object {
      "current": null,
    }
  }
  unselectedNotes={Array []}
  updateCursorValue={[Function]}
  updateDurationValue={[Function]}
  updateQuantizeValue={[Function]}
  velocityLayerRef={
    Object {
      "current": null,
    }
  }
  verticalDragMove={[Function]}
/>
`;

exports[`renders correctly 2`] = `
<div
  className="piano-roll__container"
  onKeyDown={[Function]}
  style={
    Object {
      "outline": "none",
    }
  }
  tabIndex="-1"
>
  <PianoRollControls
    cursorValue="pointer"
    durationValue="16n"
    quantizeValue="16n"
    updateCursorValue={[Function]}
    updateDurationValue={[Function]}
    updateQuantizeValue={[Function]}
  />
  <div
    className="piano-roll__canvas-container"
    id="piano-roll-canvas-container"
  >
    <ForwardRef
      container="piano-roll-canvas-container"
      height={600}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      width={800}
    >
      <GridLayer
        canvasWidth={1536}
        gridLayerRef={
          Object {
            "current": null,
          }
        }
        gridLinesArray={
          Array [
            Object {
              "points": Array [
                0,
                0,
                0,
                1728,
              ],
              "strokeWidth": 2,
            },
            Object {
              "points": Array [
                24,
                0,
                24,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                48,
                0,
                48,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                72,
                0,
                72,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                96,
                0,
                96,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                120,
                0,
                120,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                144,
                0,
                144,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                168,
                0,
                168,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                192,
                0,
                192,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                216,
                0,
                216,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                240,
                0,
                240,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                264,
                0,
                264,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                288,
                0,
                288,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                312,
                0,
                312,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                336,
                0,
                336,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                360,
                0,
                360,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                384,
                0,
                384,
                1728,
              ],
              "strokeWidth": 2,
            },
            Object {
              "points": Array [
                408,
                0,
                408,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                432,
                0,
                432,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                456,
                0,
                456,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                480,
                0,
                480,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                504,
                0,
                504,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                528,
                0,
                528,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                552,
                0,
                552,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                576,
                0,
                576,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                600,
                0,
                600,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                624,
                0,
                624,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                648,
                0,
                648,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                672,
                0,
                672,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                696,
                0,
                696,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                720,
                0,
                720,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                744,
                0,
                744,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                768,
                0,
                768,
                1728,
              ],
              "strokeWidth": 2,
            },
            Object {
              "points": Array [
                792,
                0,
                792,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                816,
                0,
                816,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                840,
                0,
                840,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                864,
                0,
                864,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                888,
                0,
                888,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                912,
                0,
                912,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                936,
                0,
                936,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                960,
                0,
                960,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                984,
                0,
                984,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1008,
                0,
                1008,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1032,
                0,
                1032,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1056,
                0,
                1056,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                1080,
                0,
                1080,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1104,
                0,
                1104,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1128,
                0,
                1128,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1152,
                0,
                1152,
                1728,
              ],
              "strokeWidth": 2,
            },
            Object {
              "points": Array [
                1176,
                0,
                1176,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1200,
                0,
                1200,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1224,
                0,
                1224,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1248,
                0,
                1248,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                1272,
                0,
                1272,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1296,
                0,
                1296,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1320,
                0,
                1320,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1344,
                0,
                1344,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                1368,
                0,
                1368,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1392,
                0,
                1392,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1416,
                0,
                1416,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1440,
                0,
                1440,
                1728,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                1464,
                0,
                1464,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1488,
                0,
                1488,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1512,
                0,
                1512,
                1728,
              ],
              "strokeWidth": 0.5,
            },
            Object {
              "points": Array [
                1536,
                0,
                1536,
                1728,
              ],
              "strokeWidth": 2,
            },
            Object {
              "points": Array [
                0,
                0,
                1536,
                0,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                16,
                1536,
                16,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                32,
                1536,
                32,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                48,
                1536,
                48,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                64,
                1536,
                64,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                80,
                1536,
                80,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                96,
                1536,
                96,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                112,
                1536,
                112,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                128,
                1536,
                128,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                144,
                1536,
                144,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                160,
                1536,
                160,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                176,
                1536,
                176,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                192,
                1536,
                192,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                208,
                1536,
                208,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                224,
                1536,
                224,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                240,
                1536,
                240,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                256,
                1536,
                256,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                272,
                1536,
                272,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                288,
                1536,
                288,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                304,
                1536,
                304,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                320,
                1536,
                320,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                336,
                1536,
                336,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                352,
                1536,
                352,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                368,
                1536,
                368,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                384,
                1536,
                384,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                400,
                1536,
                400,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                416,
                1536,
                416,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                432,
                1536,
                432,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                448,
                1536,
                448,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                464,
                1536,
                464,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                480,
                1536,
                480,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                496,
                1536,
                496,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                512,
                1536,
                512,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                528,
                1536,
                528,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                544,
                1536,
                544,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                560,
                1536,
                560,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                576,
                1536,
                576,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                592,
                1536,
                592,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                608,
                1536,
                608,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                624,
                1536,
                624,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                640,
                1536,
                640,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                656,
                1536,
                656,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                672,
                1536,
                672,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                688,
                1536,
                688,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                704,
                1536,
                704,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                720,
                1536,
                720,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                736,
                1536,
                736,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                752,
                1536,
                752,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                768,
                1536,
                768,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                784,
                1536,
                784,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                800,
                1536,
                800,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                816,
                1536,
                816,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                832,
                1536,
                832,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                848,
                1536,
                848,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                864,
                1536,
                864,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                880,
                1536,
                880,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                896,
                1536,
                896,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                912,
                1536,
                912,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                928,
                1536,
                928,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                944,
                1536,
                944,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                960,
                1536,
                960,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                976,
                1536,
                976,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                992,
                1536,
                992,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1008,
                1536,
                1008,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1024,
                1536,
                1024,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1040,
                1536,
                1040,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1056,
                1536,
                1056,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1072,
                1536,
                1072,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1088,
                1536,
                1088,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1104,
                1536,
                1104,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1120,
                1536,
                1120,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1136,
                1536,
                1136,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1152,
                1536,
                1152,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1168,
                1536,
                1168,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1184,
                1536,
                1184,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1200,
                1536,
                1200,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1216,
                1536,
                1216,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1232,
                1536,
                1232,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1248,
                1536,
                1248,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1264,
                1536,
                1264,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1280,
                1536,
                1280,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1296,
                1536,
                1296,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1312,
                1536,
                1312,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1328,
                1536,
                1328,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1344,
                1536,
                1344,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1360,
                1536,
                1360,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1376,
                1536,
                1376,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1392,
                1536,
                1392,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1408,
                1536,
                1408,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1424,
                1536,
                1424,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1440,
                1536,
                1440,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1456,
                1536,
                1456,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1472,
                1536,
                1472,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1488,
                1536,
                1488,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1504,
                1536,
                1504,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1520,
                1536,
                1520,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1536,
                1536,
                1536,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1552,
                1536,
                1552,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1568,
                1536,
                1568,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1584,
                1536,
                1584,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1600,
                1536,
                1600,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1616,
                1536,
                1616,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1632,
                1536,
                1632,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1648,
                1536,
                1648,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1664,
                1536,
                1664,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1680,
                1536,
                1680,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1696,
                1536,
                1696,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1712,
                1536,
                1712,
              ],
              "strokeWidth": 1,
            },
            Object {
              "points": Array [
                0,
                1728,
                1536,
                1728,
              ],
              "strokeWidth": 1,
            },
          ]
        }
      />
      <NoteLayer
        currentlySelectedNotes={Array []}
        handleNoteClick={[Function]}
        noteLayerRef={
          Object {
            "current": null,
          }
        }
        sectionNotes={Array []}
      />
      <VelocityLayer
        canvasWidth={1536}
        handleVelocityLayerClick={[Function]}
        selectedNotes={Array []}
        stageHeight={600}
        unselectedNotes={Array []}
        velocityLayerRef={
          Object {
            "current": null,
          }
        }
      />
      <PianoKeyLayer
        handlePianoKeyClick={[Function]}
        pianoKeyLayerRef={
          Object {
            "current": null,
          }
        }
        pitchesArray={
          Array [
            "B8",
            "A#8",
            "A8",
            "G#8",
            "G8",
            "F#8",
            "F8",
            "E8",
            "D#8",
            "D8",
            "C#8",
            "C8",
            "B7",
            "A#7",
            "A7",
            "G#7",
            "G7",
            "F#7",
            "F7",
            "E7",
            "D#7",
            "D7",
            "C#7",
            "C7",
            "B6",
            "A#6",
            "A6",
            "G#6",
            "G6",
            "F#6",
            "F6",
            "E6",
            "D#6",
            "D6",
            "C#6",
            "C6",
            "B5",
            "A#5",
            "A5",
            "G#5",
            "G5",
            "F#5",
            "F5",
            "E5",
            "D#5",
            "D5",
            "C#5",
            "C5",
            "B4",
            "A#4",
            "A4",
            "G#4",
            "G4",
            "F#4",
            "F4",
            "E4",
            "D#4",
            "D4",
            "C#4",
            "C4",
            "B3",
            "A#3",
            "A3",
            "G#3",
            "G3",
            "F#3",
            "F3",
            "E3",
            "D#3",
            "D3",
            "C#3",
            "C3",
            "B2",
            "A#2",
            "A2",
            "G#2",
            "G2",
            "F#2",
            "F2",
            "E2",
            "D#2",
            "D2",
            "C#2",
            "C2",
            "B1",
            "A#1",
            "A1",
            "G#1",
            "G1",
            "F#1",
            "F1",
            "E1",
            "D#1",
            "D1",
            "C#1",
            "C1",
            "B0",
            "A#0",
            "A0",
            "G#0",
            "G0",
            "F#0",
            "F0",
            "E0",
            "D#0",
            "D0",
            "C#0",
            "C0",
          ]
        }
      />
      <TransportLayer
        canvasWidth={1536}
        transportBarNumbersArray={
          Array [
            Object {
              "barNumber": 0,
              "xPos": 0,
            },
            Object {
              "barNumber": 1,
              "xPos": 384,
            },
            Object {
              "barNumber": 2,
              "xPos": 768,
            },
            Object {
              "barNumber": 3,
              "xPos": 1152,
            },
          ]
        }
        transportLayerRef={
          Object {
            "current": null,
          }
        }
      />
      <SeekerLayer
        canvasHeight={1768}
        seekerLayerRef={
          Object {
            "current": null,
          }
        }
        seekerLineRef={
          Object {
            "current": null,
          }
        }
      />
      <ScrollBarLayer
        handleScrollBarClickEvents={[Function]}
        horizontalDragMove={[Function]}
        padding={10}
        stageHeight={600}
        stageWidth={800}
        verticalDragMove={[Function]}
      />
    </ForwardRef>
  </div>
</div>
`;
